[project]
name = "local-llm-tg-bot"
version = "0.1.0"
description = "Telegram bot that proxies messages to a local LLM via OpenAI-compatible API"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.8",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
]

[project.scripts]
bot = "bot:main"
